--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,18 @@
 name: omni_media_picker
 description: "A Flutter plugin to capture multiple media from the device."
-version: 0.1.0
+version: 0.1.1
 homepage: https://github.com/tushshah4442/omni_media_picker.git
 repository: https://github.com/tushshah4442/omni_media_picker.git
 issue_tracker: https://github.com/tushshah4442/omni_media_picker/issues
+
+# 👇 Add topics here
+topics:
+  - flutter
+  - camera
+  - image
+  - media
+  - picker
+  - photos
 
 environment:
   sdk: ^3.8.1
